# igdb-atlas

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: publish.yml
src/: lib.rs
src/auth/: mod.rs  token_manager.rs
src/client/: config.rs  mod.rs  rate_limiter.rs
src/endpoints/: age_ratings.rs  characters.rs  collections.rs  companies.rs  date_formats.rs  events.rs  franchises.rs  games.rs  imagery.rs  languages.rs  mod.rs  networks.rs  platforms.rs  searches.rs  themes.rs  traits.rs  websites.rs
src/error/: mod.rs
src/models/: id_or_object.rs  mod.rs  timestamp.rs
src/models/age_ratings/: age_rating.rs  age_rating_category.rs  age_rating_content_description_type.rs  age_rating_content_description_v2.rs  age_rating_organization.rs  mod.rs
src/models/characters/: character.rs  character_gender.rs  character_species.rs  mod.rs
src/models/collections/: collection.rs  collection_membership.rs  collection_membership_type.rs  collection_relation.rs  collection_relation_type.rs  collection_type.rs  mod.rs
src/models/common/: mod.rs
src/models/companies/: company.rs  company_size.rs  company_status.rs  company_type.rs  company_type_history.rs  mod.rs
src/models/date_formats/: date_format.rs  mod.rs
src/models/events/: event.rs  event_network.rs  mod.rs
src/models/franchises/: franchise.rs  mod.rs
src/models/games/: alternative_name.rs  content_safety_rating.rs  content_safety_rating_dimension.rs  game.rs  (+26 more)
src/query/: builder.rs  mod.rs
tests/: integration_auth.rs  integration_error_handling.rs  integration_query_builder.rs
(+26 files in other folders)
